--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,63 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
-  <LinearLayout
-    android:orientation="vertical"
-    android:padding="16dp"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <ProgressBar
-      android:id="@+id/loading"
-      android:visibility="gone"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:id="@+id/error"
-      android:textColor="#D32F2F"
-      android:visibility="gone"
+    android:layout_height="match_parent">
+
+  <ImageView
       android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:id="@+id/title"
-      android:textSize="22sp"
+      android:layout_height="match_parent"
+      android:contentDescription="Fondo receta"
+      android:scaleType="centerCrop"
+      android:src="@drawable/bg_recipe"
+      android:translationY="-28dp" />
+  <ScrollView
       android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:text="Ingredientes"
-      android:textStyle="bold"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:id="@+id/ingredients"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:text="Pasos"
-      android:textStyle="bold"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-    <TextView
-      android:id="@+id/steps"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
+      android:layout_height="match_parent">
+
     <LinearLayout
-      android:orientation="horizontal"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="12dp">
-      <Button
-        android:id="@+id/save"
-        android:text="Guardar en Favoritos"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
-      <Button
-        android:id="@+id/favs"
-        android:text="Ver Favoritos"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:orientation="vertical"
+        android:padding="46dp">
+
+      <ProgressBar
+          android:id="@+id/loading"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:visibility="gone" />
+
+      <TextView
+          android:id="@+id/error"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="8dp"
+          android:textColor="#D32F2F"
+          android:visibility="gone" />
+
+      <TextView
+          android:id="@+id/title"
+          android:layout_width="match_parent"
+          android:layout_height="14dp"
+          android:layout_marginBottom="5dp"
+          android:letterSpacing="0.05"
+          android:textSize="24sp"
+          android:textStyle="bold" />
+
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="5dp"
+          android:letterSpacing="0.04"
+          android:text="Ingredientes"
+          android:textAlignment="center"
+          android:textSize="16sp"
+          android:textStyle="bold" />
+
+      <TextView
+          android:id="@+id/ingredients"
+          android:layout_width="match_parent"
+          android:layout_height="212dp"
+          android:layout_marginBottom="5dp"
+          android:letterSpacing="0.05"
+          android:lineSpacingExtra="2dp" />
+
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="6dp"
+          android:letterSpacing="0.04"
+          android:text="Pasos"
+          android:textAlignment="center"
+          android:textSize="16sp"
+          android:textStyle="bold" />
+
+      <TextView
+          android:id="@+id/steps"
+          android:layout_width="match_parent"
+          android:layout_height="289dp"
+          android:layout_marginBottom="20dp"
+          android:letterSpacing="0.02"
+          android:lineSpacingExtra="4dp" />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="12dp"
+          android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="50dp"
+            android:layout_height="62dp"
+            android:layout_weight="1"
+            android:letterSpacing="0.02"
+            android:padding="5dp"
+            android:text="Guardar en Favoritos" />
+
+        <Button
+            android:id="@+id/favs"
+            android:layout_width="0dp"
+            android:layout_height="62dp"
+            android:layout_weight="1"
+            android:letterSpacing="0.02"
+            android:padding="10dp"
+            android:text="Ver Favoritos" />
+      </LinearLayout>
     </LinearLayout>
-  </LinearLayout>
-</ScrollView>
+  </ScrollView>
+</FrameLayout>
